src/test/deca/context/valid/created/sans_objet/if_elseif.deca
{
   boolean a;
   boolean b = false || true;
   if(a == true) {
      println("error");
   } else if(!!a) {
      println("error");
   } else if((b || false)) {
      println("passed");
   } else {
      println("error");
   }
}